--- a/src/components/games/games.css
+++ b/src/components/games/games.css
@@ -34,4 +34,8 @@
 .games .game_box {
   width: 100%;
   text-decoration: none;
+  border: solid 1px #182c47;
+  background-color: #0e1a2b;
+  z-index: 1;
+  color: #fff;
 }
